# dispatch

./: .gitlab-ci.yml  Cargo.toml  README  README.md  com.maxrdz.Dispatch.json  justfile  meson.build  meson.options
i18n/en/: dispatch.ftl
res/: app.desktop  app.metainfo.xml.in  meson.build
src/: app.rs  i18n.rs  main.rs
