[package]
name = "dispatch"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
authors = ["Max Rodriguez <me@maxrdz.com>"]
license-file = "COPYING"
repository = "https://gitlab.com/maxrdz/dispatch"

[dependencies]
futures-util = "0.3.31"
i18n-embed-fl = "0.9.2"
modemmanager = { git = "https://github.com/omnect/modemmanager.git" }
open = "5.3.0"
rust-embed = "8.5.0"
sqlite = "0.36"
tokio = { version = "1.41.0", features = ["full"] }
zspell = "0.5"

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
